--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,19 @@
     <title>Home work 12</title>
   </head>
   <body>
-    
+    <div class="container">
+      <form class="search-form js-serch-form">
+        <label for="serch-country" class="serch-form-label">Please enter country name</label>
+        <input 
+          type="text" 
+          class="serch-form-input" 
+          id="serch-country" 
+          autocomplete="off"
+          name="country-name">
+      </form>
+      <div class="countries-box">
+        
+      </div>
+    </div>
   </body>
 </html>
