problems with pnotify

--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,15 @@
   </head>
   <body>
     <div class="container">
-      <form class="search-form js-serch-form">
-        <label for="serch-country" class="serch-form-label">Please enter country name</label>
+      <div class="search-box js-serch-box">
+        <h3 class="serch-box-name">Please enter country name</h3>
         <input 
           type="text" 
-          class="serch-form-input" 
-          id="serch-country" 
+          class="serch-box-input search-input-js" 
           autocomplete="off"
           name="country-name">
-      </form>
+      </div>
       <div class="countries-box">
-        
       </div>
     </div>
   </body>
